fix: generate group hierarchy base on configuration files (#45)